fix z-index on for backdrop

--- a/client-app/src/app/app.component.scss
+++ b/client-app/src/app/app.component.scss
@@ -2,4 +2,5 @@ app-splash-screen {
   height: 100vh;
   width: 100vw;
   position: fixed;
+  z-index: 9999;
 }
